# wireless-communication-industry-knowledge-assistance

./: Project_Installation_and_Run_Guide.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  schema.sql
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: domain.py
backend/app/services/: chroma.py  crawler.py  extraction.py  rag.py  search.py  vector_store.py
backend/app/workers/: celery_app.py  tasks.py
docs/: architecture.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  styles.css
infra/helm/wireless-intel/: Chart.yaml  values.yaml
infra/helm/wireless-intel/templates/: backend.yaml  config.yaml  frontend.yaml  worker.yaml
infra/k8s/: backend.yaml  config.yaml  frontend.yaml  worker.yaml
