[project]
name = "wireless-intelligence-backend"
version = "0.1.0"
description = "AI-powered wireless communication intelligence backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "beautifulsoup4>=4.12.3",
  "celery[redis]>=5.4.0",
  "chromadb==0.5.5",
  "fastapi>=0.112.0",
  "httpx>=0.27.0",
  "langchain>=0.2.12",
  "langchain-community>=0.2.11",
  "langchain-openai>=0.1.20",
  "langchain-text-splitters>=0.2.2",
  "openai>=1.40.0",
  "passlib[bcrypt]>=1.7.4",
  "playwright>=1.46.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.8",
  "scrapy>=2.11.2",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.9",
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
